fixed some of the pages

--- a/babyshrimp.html
+++ b/babyshrimp.html
@@ -13,40 +13,37 @@
 <body id="page" class="bg-shrimp">
     <div class="text-center">
         <p>
-            <a>CHOOSE </a>
-            <a>YOUR </a>
-            <a>SHRIMP </a>
-            <a>WISELY</a>
+            CHOOSE YOUR SHRIMP WISELY
         </p>
         <table class="bg-babyshrimp" width="421" height="640">
             <tbody>
                 <tr>
                     <td>
                         <p class="text-center">
-                            <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="index.html">
+                            <a href="index.html">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                             </a>
                         </p>
                         <p class="text-center">
-                            <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="index.html">
+                            <a href="index.html">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                             </a>
                         </p>
                         <p class="text-center">
-                            <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="posture.html">
+                            <a href="posture.html">
                                 <img src="images/shrimp.png" width="93" height="93">
                             </a>
-                            <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="index.html">
+                            <a href="index.html">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                             </a>
                         </p>
                         <p class="text-center">
-                            <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="index.html">
+                            <a href="index.html">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
                                 <img src="images/shrimp.png" width="93" height="93">
@@ -56,9 +53,6 @@
                 </tr>
             </tbody>
         </table>
-        <p class="clever text-center">
-            <em class="PTAG"></em>
-        </p>
     </div>
 
 </body>
