--- a/bar.html
+++ b/bar.html
@@ -68,9 +68,7 @@
     <div class="bar" onmouseover="this.style.background='black';"></div>
     <div class="bar" onmouseover="this.style.background='green';"></div>
     <div class="bar" onmouseover="this.style.background='green';"></div>
-    <div class="bar"><a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('evilmonster.html')"
-            href="evilmonster.html"></a>
-    </div>
+    <div class="bar"><a href="evilmonster.html"></a></div>
     <div class="bar" onmouseover="this.style.background='green';"></div>
     <div class="bar" onmouseover="this.style.background='green';"></div>
     <div class="bar" onmouseover="this.style.background='black';" onmouseout="this.style.background='white';"></div>
