--- a/black.html
+++ b/black.html
@@ -20,21 +20,20 @@
     <p class="text-center">|o|||o|o|o|o|o|||</p>
     <p class="text-center">|o|||o|o|o|o|o|||</p>
     <p class="text-center">|o|||o|o|o|o|o|||</p>
-    <p class="text-center"><a onMouseOver="LinkHover()" onMouseOut="LinkOut()"
-            onClick="LinkClick('slide.html')">|o|||o|o|o|o|o|||</a></p>
+    <p class="text-center">
+        <a href="slide.html">|o|||o|o|o|o|o|||</a>
+    </p>
     <p class="text-center">|o|||o|o|o|o|o|||</p>
     <p class="text-center">|o|||o|o|o|o|o|||</p>
     <p class="text-center">|o|||o|o|o|o|o|||</p>
-    <p class="text-center">|o|||o|<a onMouseOver="LinkHover()" onMouseOut="LinkOut()"
-            onClick="LinkClick('numbers.html')" href="numbers.html">o</a>|o|o|o|||</p>
+    <p class="text-center">|o|||o|<a href="numbers.html">o</a>|o|o|o|||</p>
     <p class="text-left">4d 61 64 65 20 79 6f 75 20 67 6f 20 74 6f 20 61 20 68 6
-        <a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('index.html')" href="index.html">5</a> 78
-        20 63 6f 6e 76 65
+        <a href="index.html">5</a> 78 20 63 6f 6e 76 65
         72 74 65 72 2e 20 48 61 2e
     </p>
-    <p class="text-left"><a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('index.html')">1</a></p>
+    <p class="text-left"><a href="index.html">1</a></p>
     <p class="text-left">2</p>
-    <p class="text-left"><a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('face.html')">3</a></p>
+    <p class="text-left"><a href="face.html">3</a></p>
 </body>
 
 </html>
