--- a/creepy.html
+++ b/creepy.html
@@ -12,9 +12,7 @@
 
 <body id="page" class="bg-black vsc-initialized">
     <p class="text-center text-white">
-        <a class="CPTAG CFTAG">YOU </a>
-        <a class="CPTAG CFTAG">SEE </a>
-        <em class="PTAG"></em> NOW?
+        YOU SEE NOW?
         <a href="face.html"><img src="images/creepy.jpg" width="600"> </a>
     </p>
 
