--- a/fakeMain.html
+++ b/fakeMain.html
@@ -12,8 +12,7 @@
 
 <body id="page" class="bg-fake-main">
     <p class="text-center">
-        <a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('donttalktome.html')"><img
-                src="images/thanksFake.png" width="306"> </a>
+        <a href="donttalktome.html"><img src="images/thanksFake.png" width="306"> </a>
     </p>
     <p class="mt text-center text-white text-normal text-pink strong">
         <a class="clever" href="black.html"> 'TWAS A
