--- a/numbers.html
+++ b/numbers.html
@@ -8,25 +8,20 @@
     <meta name="description" content="">
     <title>THANKS FOR VISITING</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <!-- <link rel="stylesheet" href="numbers_files/style-clickpoints.css" type="text/css"> -->
 </head>
 
 <body id="page" class="vsc-initialized">
 
     <div class="relative w512 nomargin">
-        <img src="numbers_files/card.gif" width="512">
+        <img src="images/card.gif" width="512">
 
-        <a class="pull-right" onmouseover="LinkHover()" onmouseout="LinkOut()" href="black.html"><img
-                src="numbers_files/box4.jpg" width="32"> </a>
+        <a class="pull-right" href="black.html"><img src="images/box4.jpg" width="32"> </a>
     </div>
     <p>
 
-        <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="creepy.html"><img src="numbers_files/box4.jpg"
-                width="32"> </a>
-        <a onmouseover="LinkHover()" onmouseout="LinkOut()" href="index.html"><img src="numbers_files/box4.jpg"
-                width="32"> </a>
+        <a href="creepy.html"><img src="images/box4.jpg" width="32"> </a>
+        <a href="index.html"><img src="images/box4.jpg" width="32"> </a>
     </p>
-    <em></em>
 
 </body>
 
