--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body id="page" class="bg-main">
     <p class="text-center">
-        <a onMouseOver="LinkHover()" onMouseOut="LinkOut()" onClick="LinkClick('donttalktome.html')"
-            href="donttalktome.html"><img src="images/thanks.png" width="306" style="cursor: pointer;"> </a>
+        <a href="donttalktome.html"><img src="images/thanks.png" width="306"> </a>
     </p>
 </body>
 
