--- a/posture.html
+++ b/posture.html
@@ -23,7 +23,7 @@
         toe? </p>
     <hr>
     <p class="text-red"> Why not check back <em class="PTAG"></em> every day and chart your own posture progress? </p>
-    <p class="text-blue"><a onmouseover="LinkHover()" onmouseout="LinkOut()" href="bar.html">Very good!</a></p>
+    <p class="text-blue"><a href="bar.html">Very good!</a></p>
 
 </body>
 
