finished up fixing the pages

--- a/slide.html
+++ b/slide.html
@@ -11,17 +11,9 @@
 </head>
 
 <body id="page" class="bg-slide vsc-initialized">
-    <em class="PTAG pull-left text-white"></em>
-    <em class="PTAG pull-right text-white"></em>
     <p class="mt text-center text-white">
-        <a class="CPTAG CFTAG">YOU </a>
-        <a class="CPTAG CFTAG">SHOULD </a>
-        <a class="CPTAG CFTAG">LEAVE </a>
-        <br><br><a onmouseover="LinkHover()" onmouseout="LinkOut()" href="babyshrimp.html"><img src="images/slide.gif"
-                width="300"> </a>
-    </p>
-    <p class="clever text-white">
-        <em class="PTAG"></em>
+        YOU SHOULD LEAVE
+        <br><br><a href="babyshrimp.html"><img src="images/slide.gif" width="300"> </a>
     </p>
 
 </body>
