--- a/slide2.html
+++ b/slide2.html
@@ -11,8 +11,6 @@
 </head>
 
 <body id="page" class="bg-slide2 vsc-initialized">
-    <em class="PTAG pull-left text-white"></em>
-    <em class="PTAG pull-right text-white"></em>
     <p class="mt text-center">
         <a href="creepy.html">
             <img src="images/slide.gif" width="300">
@@ -20,10 +18,7 @@
     </p>
     <p class="text-center">
         <a href="fakeMain.html"><img src="images/box3.jpg" width="32" height="32"> </a>
-        <span class="text-white">&lt;--- DON'T <a class="CPTAG CFTAG">CLICK</a> <a class="CPTAG CFTAG">HERE</a></span>
-    </p>
-    <p class="clever text-white">
-        <em class="PTAG"></em>
+        <span class="text-white">&lt;--- DON'T CLICK HERE</span>
     </p>
 
 </body>
