--- a/posture.html
+++ b/posture.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html itemscope="" itemtype="http://schema.org/WebPage">
+<!Doctype HTML>
+<html itemscope itemtype="http://schema.org/WebPage">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="description" content="">
@@ -10,21 +10,20 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
-<body id="page" class="vsc-initialized">
-    <p class="text-red"> If you want to <em class="PTAG"></em> have good posture, and everyone does, here are some
-        helpful <a class="CFTAG">posture</a> questions to ask yourself. </p>
+<body id="page">
+    <p class="text-red"> If you want to have good posture, and everyone does, here are some helpful posture questions to
+        ask yourself. </p>
     <hr>
     <p> Do I... </p>
-    <p> ...sit tall with feet flat on the <a class="CPTAG">floor</a>? </p>
-    <p> ...sit with my buttocks against the lower <a class="CFTAG">back</a> of my chair? </p>
-    <p> ...hold my <a class="CPTAG">head</a> high, and keep my chin up <em class="PTAG"></em> marionette style? </p>
-    <p> ...walk with my <a class="CFTAG">legs</a> close together, swinging them from the hip joints? </p>
-    <p> ...walk letting my heel hit the ground first, followed by the <a class="CPTAG">outside</a> of my foot, then the
-        toe? </p>
+    <p> ...sit tall with feet flat on the floor? </p>
+    <p> ...sit with my buttocks against the lower back of my chair? </p>
+    <p> ...hold my head high, and keep my chin up marionette style? </p>
+    <p> ...walk with my legs close together, swinging them from the hip joints? </p>
+    <p> ...walk letting my heel hit the ground first, followed by the outside of my foot, then the toe? </p>
     <hr>
-    <p class="text-red"> Why not check back <em class="PTAG"></em> every day and chart your own posture progress? </p>
-    <p class="text-blue"><a href="bar.html">Very good!</a></p>
-
+    <p class="text-red"> Why not check back every day and chart your own posture progress? </p>
+    <p class="text-red"><a href="bar.html">Very
+            good!</a></p>
 </body>
 
 </html>
