added credit comments

--- a/donttalktome.html
+++ b/donttalktome.html
@@ -1,6 +1,12 @@
 <!Doctype HTML>
 <html itemscope itemtype="http://schema.org/WebPage">
-
+<!--                                                                          -->
+<!--                                                                          -->
+<!--      WEBSITE CREATED BY ADAM FLATAU: https://twitter.com/thewebpro       -->
+<!--                                                                          -->
+<!--  PLAY WELCOME TO THE GAME 2: https://store.steampowered.com/app/720250/  -->
+<!--                                                                          -->
+<!--                                                                          -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
