--- a/slide.html
+++ b/slide.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html itemscope="" itemtype="http://schema.org/WebPage">
+<!--                                                                          -->
+<!--                                                                          -->
+<!--      WEBSITE CREATED BY ADAM FLATAU: https://twitter.com/thewebpro       -->
+<!--                                                                          -->
+<!--  PLAY WELCOME TO THE GAME 2: https://store.steampowered.com/app/720250/  -->
+<!--                                                                          -->
+<!--                                                                          -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
